--- a/colorsapp/package.json
+++ b/colorsapp/package.json
@@ -39,6 +39,7 @@
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-simple-import-sort": "^5.0.2",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
